# citra2018

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt
CMakeModules/: MinGWCross.cmake
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  dsp_interface.cpp  dsp_interface.h  sink_details.cpp
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  environment.cpp
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt  announce_multiplayer_session.cpp  core.cpp  core.h  perf_stats.cpp  perf_stats.h  settings.cpp  settings.h  telemetry_session.cpp
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/hle/kernel/: svc.cpp
src/core/hle/service/apt/: apt.cpp
src/core/hle/service/gsp/: gsp_gpu.cpp
src/core/hle/service/hid/: hid.cpp
src/core/hw/: gpu.cpp
src/core/loader/: ncch.cpp
src/input_common/: CMakeLists.txt  main.cpp
src/video_core/: command_processor.cpp
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer_cache.cpp  gl_shader_gen.cpp  pica_to_gl.h  renderer_opengl.cpp
src/video_core/shader/: shader.cpp  shader_interpreter.cpp  shader_jit_x64.cpp
src/video_core/swrasterizer/: rasterizer.cpp
src/web_service/: CMakeLists.txt
